# task-omp

./: .clang-format-ignore  .gitignore  meson.build  readme.md
samples/: demo.c  demo.txt  meson.build
samples/catter/: catter.cpp
samples/vscode_opener/: code.cpp
src/: common.hpp  driver.cpp  libservice.hpp  meson.build  registering_service.cpp  registering_service.hpp  service.cpp  service.hpp  sharing_service.cpp  sharing_service.hpp
test/: meson.build  registering.cpp  sharing.cpp
